# MLNN

./: CMakeLists.txt  LICENSE  main.cpp
include/: CMakeLists.txt  Math.cpp  Math.h  MatrixNxN.cpp  MatrixNxN.h  Vec2D.cpp  Vec2D.h  Vec3D.cpp  Vec3D.h
